--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -11,12 +11,14 @@
     margin-left: 20%;
 }
 
+
 .App_header__secondary-action{
     margin-left: 22%;
 }
 
 .App_header__secondary-input{
     width:600px;
+    margin-left:36%;
 }
 .App__header{
     position:fixed;
@@ -27,12 +29,72 @@
     box-shadow: 5px -2px 16px 1px rgba(34, 60, 80, 0.2);
    
 }
-
+.navbar{
+    padding:0;
+}
+.App_header__secondary{
+    padding:10px 0 10px 0;
+}
 .App_header__secondary-button{
-    min-width: 100px;
+    min-width: 120px;
     font-size: 14px;
     font-weight: 500;
     margin-right: 22%;
-    border-radius: 20px;
+    border-radius: 10px;
+    color:#fff;
     
 }
+.App_header__secondary-cart{
+    margin-left: 15px;
+    padding-left:15px;
+    border-left: 1px solid #ffe000;
+    
+}
+
+    /* @media (max-width: 1400px) { 
+        .App_header__secondary-input{
+            width:400px;
+           
+        }
+        .App_header__main-Header{
+            font-size: 30px;
+            margin-left: 10%;
+        }
+        .App_header__secondary-action{
+            margin-left:10%;
+        }
+        .App_header__secondary-button{
+            margin-right: 0
+        }
+     }
+     @media (max-width: 1200px) { 
+        .App_header__secondary-input{
+            width:400px;
+        }
+        .App_header__main-Header{
+            font-size: 30px;
+            margin-left: 10%;
+        }
+        .App_header__secondary-action{
+            margin-left:10%;
+        }
+        .App_header__secondary-button{
+            margin-right: 12%;
+        }
+     }
+     @media (max-width: 992px) { 
+        .App_header__secondary-input{
+            width:200px;
+        }
+        .App_header__main-Header{
+            font-size: 30px;
+            margin-left: 10%;
+        }
+    }
+    @media (max-width: 768px) { 
+        .App_header__secondary-input{
+            width:100px;
+        }
+     } */
+
+
