--- a/frontend/src/css/content.css
+++ b/frontend/src/css/content.css
@@ -40,7 +40,7 @@ transition: all 0.5s ease-out;
 }
 .card-img-top{
   width: 230px;
-  margin:40px 27px 60px 27px;
+  margin:20px 27px 60px 27px;
   align-self:flex-start;
 }
 .card-inline-content{
@@ -61,4 +61,30 @@ transition: all 0.5s ease-out;
   display:flex;
   flex-direction: column;
  
+}
+
+
+.myCheckbox__input{
+    appearance: none;
+    -webkit-appearance: none;
+    position:absolute;
+}
+.check__box{
+  position:absolute;
+  height:2em;
+  width:2em;
+  background-image:url('data:image/svg+xml,\
+  <svg width="2em" height="2em" viewBox="0 0 17 17" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">\
+  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>\
+  </svg>');
+}
+.myCheckbox__input:checked + .check__box{
+  background-image:url('data:image/svg+xml,\
+  <svg width="2em" height="2em" viewBox="0 0 17 17" class="bi bi-heart-fill" fill="tomato" xmlns="http://www.w3.org/2000/svg">\
+  <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>\
+  </svg>');
+}
+.option{
+  padding:20px 0 0 20px;
+  cursor: pointer;
 }
