--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -1,24 +1,26 @@
 .App_header__main-button{
-    max-width: 100px;
+    
     font-size: 14px;
     font-weight: 500;
-    margin-right: 22%;
     border-radius: 20px;
+    margin-right: 20px;
+    padding: 10px 30px;
     
 }
 .App_header__main-Header{
     font-size: 40px;
-    margin-left: 20%;
+
+  
+}
+.App_header__main-container a{
+    text-decoration: none;
 }
 
 
-.App_header__secondary-action{
-    margin-left: 22%;
-}
 
 .App_header__secondary-input{
     width:600px;
-    margin-left:36%;
+    
 }
 .App__header{
     position:fixed;
@@ -49,6 +51,24 @@
     padding-left:15px;
     border-left: 1px solid #ffe000;
     
+}
+
+.button-controller{
+    display:flex;
+    
+}
+.App_header__secondary-action{
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.navbar-brand-menu{
+    background-color: #a9a9a9;
+    margin:0 10px;
+    padding:5px 30px 7px 30px;
+    border-radius: 20px;
+    color:#fff;
+    text-align: center;
+    cursor: po;
 }
 
     /* @media (max-width: 1400px) { 
