--- a/frontend/src/css/cart.css
+++ b/frontend/src/css/cart.css
@@ -8,7 +8,9 @@
 }
 .cart-item{
     display:flex;
+    justify-content: space-between;
     margin:35px;
+    user-select: none;
     
 }
 
@@ -18,6 +20,7 @@
 .detalic-item-description{
     display:flex;
     flex-direction: column;
+    width:200px;
 }
 
 .item-description-name{
@@ -32,4 +35,84 @@
     font-weight: 500;
     padding-top: 10px;
     margin-left: 20px;
+}
+.minusButton{
+    cursor: pointer;
+}
+.plusButton{
+    cursor: pointer;
+}
+.minusButton:hover{
+    color:black
+}
+.item-button-controller{
+    align-self: center;
+}
+
+.count_of_item{
+    padding:10px;
+}
+.total-price{
+    align-self: center;
+    font-weight: 500;
+    font-size: 17px;
+}
+.delete-button{
+    align-self: center;
+    cursor: pointer;
+}
+.cart-header{
+    display:flex;
+    justify-content: space-between;
+    margin:0 50px 70px 50px;
+    
+}
+.car-item-description{
+    
+    margin-left: 10px;
+    font-size: 35px;
+    font-weight: 400;
+    
+}
+.cart-description{
+    display:flex;
+    align-items: center;
+}
+.delete-butoon-controller{
+    color:#cecece;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.delete-block-name{
+    padding-left: 5px;
+}
+.info{
+    margin:50px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 500;
+}
+.total_sum{
+    color:#f90;
+    font-size: 20px;
+}
+.cart-footer{
+    display:flex;
+    justify-content: space-between;
+    margin:50px;
+}
+.return_button{
+    font-size: 20px;
+    font-weight: 400;
+    width:140px;
+    border-radius: 30px;
+}
+.pay_button
+{
+    font-size: 20px;
+    font-weight: 400;
+    width:140px;
+    border-radius: 30px;
 }
