--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -9,6 +9,7 @@
 }
 .App_header__main-Header{
     font-size: 40px;
+    margin-left:200px;
 
   
 }
@@ -20,16 +21,16 @@
 
 .App_header__secondary-input{
     width:600px;
+    margin-right: 150px;
     
 }
-.App__header{
+.App_header__main{
     position:fixed;
     width:100%;
     z-index:1000;
     background-color: #fff;
-    padding-bottom: 10px;
+    padding:10px 0 20px 0;
     box-shadow: 5px -2px 16px 1px rgba(34, 60, 80, 0.2);
-   
 }
 .navbar{
     padding:0;
@@ -55,41 +56,148 @@
 
 .button-controller{
     display:flex;
+    margin-right: 200px;
+    
+    
+}
+.Partnership{
+    font-size: 20px;
+}
+.Partnership:hover{
+    color:Grey;
+    cursor: pointer;
     
 }
 .App_header__secondary-action{
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 100px;
     display:flex;
-   
-    width:100%;
     user-select: none;
 
 }
 .navbar-brand-menu{
-    background-color:#b3b3b3;
     margin:0 10px;
-    padding:7px 30px 7px 30px;
-    border-radius: 20px;
+    padding:6px 12px;
+    font-size: 20px;
+    color:black;
+    text-align: center;
+    cursor: pointer;
+    font-weight: 400;
+    line-height: 1.5;
+}
+.navbar-brand-menu:hover{
+    background-color: #5a6268;
+    border-radius: 40px;
     color:#fff;
     text-align: center;
     cursor: pointer;
 }
 .navbar-brand-menu-active{
-    border:2px solid #909090;
+    background-color: #5a6268;
+    border-radius: 40px;
+    color:#fff;
+    border:#5a6268;
+    box-shadow: 0 0 0 0.2rem rgba(130,138,145,.5);
+}
+.active-button{
+    background-color: #5a6268;
+    border-radius: 40px;
+    color:#fff;
+    border:#5a6268;
+    box-shadow: 0 0 0 0.2rem rgba(130,138,145,.5);
+    padding:6px 24px;
+    font-size: 19px;
 }
 .navbar-brand-menu-switcher-button{
     border-radius: 20px;
+    background-color: #fff;
+    color:black;
+    border:none;
+    font-size: 19px;
+
 }
+.navbar-brand-menu-switcher-button:hover{
+    border-radius: 20px;
+    color:#fff;
+}
+.navbar-brand-menu-switcher-button:active{
+    border-radius: 20px;
+    color:#fff;
+}
+
 .navbar-brand-menu-switcher{
     margin-left: 10px;
+    
 }
 .dropdown-menu-items{
     margin:10px 0 0 0;
     border-radius: 20px;
     padding:20px 5px;
 }
-
+.list-group{
+    position: absolute;
+    width:600px;
+    height:400px;
+    border-radius: 50px;   
+}
+.list-group a{
+    text-decoration: none;
+    color:#6b6b6b;
+}
+.list_item{
+    padding:20px;
+    z-index:500;
+    border-top:none;
+    display:flex;
+    flex-direction: column;
+    
+    
+}
+.search_description_name{
+    font-size: 20px;
+    font-weight: 500;
+}
+.list_item:hover{
+    color: #4e4c4c;
+    cursor: pointer;
+}
+.list_group_last{   
+    border-radius: 120px;
+}
+.App_header__secondary-container{
+    padding:10px 20px 30px 20px;
+    margin:0 0 20px 0;
+    display:flex;
+    flex-direction: row;
+    border-bottom:solid 1px #e0dede;
+    
+}
+.modal{
+    z-index:1200;
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:1250px;
+    height:100px;
+    padding:15px;
+    border-radius:10px;
+    transform:translate(-50%, -50%);
+    background:#fff
+}
+  
+.bg{ 
+    overflow: hidden;
+    z-index:1100;
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background:rgba(0, 0, 0, 0.3);
+}
+.all{
+    position: relative;
+}
 
     /* @media (max-width: 1400px) { 
         .App_header__secondary-input{
