--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -1,4 +1,7 @@
-.App{
-    width:2100px;
-    margin:0 auto;
-}
+html, body, .app {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+  }
