--- a/frontend/src/css/authenticationStyles.css
+++ b/frontend/src/css/authenticationStyles.css
@@ -1,31 +1,33 @@
-.authPopup{
-  position: fixed;
-  left: 25%;
-  top: 25%;
-  bottom:25%;
-  right:25%;
-  width:500px;
-  height:600px;
-  margin: auto;
-  background: white;
-  border-radius:25px;
-  z-index:1100;
-}
-.registrationPopup{
+.authPopup {
     position: fixed;
     left: 25%;
     top: 25%;
-    bottom:25%;
-    right:25%;
-    width:500px;
-    height:750px;
-    
+    bottom: 25%;
+    right: 25%;
+    width: 500px;
+    height: 600px;
     margin: auto;
     background: white;
-    border-radius:25px;
-    z-index:1100;
+    border-radius: 25px;
+    z-index: 1100;
 }
-.authWrapper{
+
+.registrationPopup {
+    position: fixed;
+    left: 25%;
+    top: 25%;
+    bottom: 25%;
+    right: 25%;
+    width: 500px;
+    height: 750px;
+
+    margin: auto;
+    background: white;
+    border-radius: 25px;
+    z-index: 1100;
+}
+
+.authWrapper {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -34,42 +36,49 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    background-color: rgba(0,0,0, 0.5);
-    z-index:1100;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1100;
 }
-.main-auth-popup{
-    display:flex;
+
+.main-auth-popup {
+    display: flex;
     flex-direction: column;
 }
-.auth-title{
-    align-self:center;
-    
+
+.auth-title {
+    align-self: center;
+
 }
-.auth-title-header{
+
+.auth-title-header {
     font-size: 50px;
     font-weight: 500;
 }
-.reg-sub-title{
+
+.reg-sub-title {
     font-size: 25px;
-    margin:20px 100px 0 85px;
+    margin: 20px 100px 0 85px;
     font-weight: 600;
     color: rgb(33, 49, 60);
     letter-spacing: 0.05em;
     text-align: center;
 }
-.auth-sub-title{
+
+.auth-sub-title {
     font-size: 25px;
-    margin:50px 100px 0 85px;
+    margin: 50px 100px 0 85px;
     font-weight: 600;
     color: rgb(33, 49, 60);
     letter-spacing: 0.05em;
     text-align: center;
 }
-.auth-body{
+
+.auth-body {
     align-self: center;
 }
+
 .google-button {
-    display:flex;
+    display: flex;
     height: 40px;
     border-width: 1px;
     border-style: solid;
@@ -78,47 +87,53 @@
     color: #fff;
     border-radius: 5px;
     white-space: nowrap;
-    box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
+    box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.05);
     transition-property: background-color, box-shadow;
     transition-duration: 150ms;
     transition-timing-function: ease-in-out;
-    padding:0px 2px 0px 0px;
-  }
-  .google-button:focus:hover{
-    box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);
-  }
-  .google-button:active{
+    padding: 0px 2px 0px 0px;
+}
+
+.google-button:focus:hover {
+    box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.google-button:active {
     background-color: rgb(40, 85, 158);
     box-shadow: none;
     transition-duration: 10ms;
-  }
-      
-  .google-button__icon {
+}
+
+.google-button__icon {
     display: inline-block;
     vertical-align: middle;
-    
+
     width: 36px;
-    height:38px;
+    height: 38px;
     box-sizing: border-box;
     background-color: white;
-    
-  }
-  .google-button__text{
-      align-self: center;
-      margin-left: 65px;
-      font-size: 20px;
-      font-weight: 400;
-  }
-  .auth-body_Google_auth{
-      margin-top: 30px;
-      margin-bottom: 30px;
-  }
-  .line{
-      width:350px;
-      position: relative;
-      text-align: center;  
-  }
-  .line span{
+
+}
+
+.google-button__text {
+    align-self: center;
+    margin-left: 65px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.auth-body_Google_auth {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.line {
+    width: 350px;
+    position: relative;
+    text-align: center;
+}
+
+.line span {
     font-size: 14px;
     font-weight: normal;
     line-height: 16px;
@@ -126,8 +141,9 @@
     text-align: center;
     background: rgb(255, 255, 255);
     padding: 0px 10px;
-  }
-  .line::before {
+}
+
+.line::before {
     display: inline-block;
     content: "";
     position: absolute;
@@ -142,15 +158,18 @@
     border-top: 1px solid rgb(184, 196, 194);
     margin: 0px auto;
 }
-.auth-body_Mail_auth{
+
+.auth-body_Mail_auth {
     margin-top: 30px;
 }
-.auth-body_Mail_auth input{
-    display:flex;
-    width:350px;
-    padding:7px;
+
+.auth-body_Mail_auth input {
+    display: flex;
+    width: 350px;
+    padding: 7px;
 }
-.Authentication-Label{
+
+.Authentication-Label {
     font-size: 14px;
     color: rgb(61, 79, 88);
     position: relative;
@@ -160,41 +179,49 @@
     line-height: 16px;
     letter-spacing: 0.02em;
 }
-.auth-futer{
-    display:flex;
-    margin:50px 70px;
+
+.auth-futer {
+    display: flex;
+    margin: 50px 70px;
 }
-.auth-next-step-button{
-    padding:7px 30px;
-    margin-right:15px;
+
+.auth-next-step-button {
+    padding: 7px 30px;
+    margin-right: 15px;
 }
-.auth-redirect-to-Registration{
+
+.auth-redirect-to-Registration {
     align-self: center;
     font-size: 17px;
 }
-.auth-redirect-to-Registration span{
+
+.auth-redirect-to-Registration span {
     margin-left: 1px;
     color: rgb(0, 124, 173);
     cursor: pointer;
 }
 
-.main-registration-popup{
+.main-registration-popup {
     height: 800px;
 }
-.auth-reg-futer{
-    display:flex;
-    margin:70px 0 50px 0;
+
+.auth-reg-futer {
+    display: flex;
+    margin: 70px 0 50px 0;
     justify-content: space-between;
 }
-.auth-prev-button{
-    padding:7px 30px;
-    
+
+.auth-prev-button {
+    padding: 7px 30px;
+
 }
-.reg-next-step-button{
-    padding:7px 27px;
-    
+
+.reg-next-step-button {
+    padding: 7px 27px;
+
 }
-.Authentication_Form{
+
+.Authentication_Form {
     align-self: center;
     margin-left: 10px;
 }
