--- a/frontend/src/css/cart.css
+++ b/frontend/src/css/cart.css
@@ -1,118 +1,136 @@
-.cart{
+.cart {
     padding-top: 300px;
 }
-.cart-img{
+
+.cart-img {
     border-radius: 50px;
-    height:120px;
-    width:120px;
+    height: 120px;
+    width: 120px;
 }
-.cart-item{
-    display:flex;
+
+.cart-item {
+    display: flex;
     justify-content: space-between;
-    margin:35px;
+    margin: 35px;
     user-select: none;
-    
+
 }
 
-.item-description{
-    display:flex;
+.item-description {
+    display: flex;
 }
-.detalic-item-description{
-    display:flex;
+
+.detalic-item-description {
+    display: flex;
     flex-direction: column;
-    width:200px;
+    width: 200px;
 }
 
-.item-description-name{
+.item-description-name {
     font-size: 20px;
     font-weight: 500;
     align-self: flex-start;
     padding-top: 10px;
     margin-left: 20px;
 }
-.item-description-price{
+
+.item-description-price {
     font-size: 20px;
     font-weight: 500;
     padding-top: 10px;
     margin-left: 20px;
 }
-.minusButton{
+
+.minusButton {
     cursor: pointer;
 }
-.plusButton{
+
+.plusButton {
     cursor: pointer;
 }
-.minusButton:hover{
-    color:black
+
+.minusButton:hover {
+    color: black
 }
-.item-button-controller{
+
+.item-button-controller {
     align-self: center;
 }
 
-.count_of_item{
-    padding:10px;
+.count_of_item {
+    padding: 10px;
 }
-.total-price{
+
+.total-price {
     align-self: center;
     font-weight: 500;
     font-size: 17px;
 }
-.delete-button{
+
+.delete-button {
     align-self: center;
     cursor: pointer;
 }
-.cart-header{
-    display:flex;
+
+.cart-header {
+    display: flex;
     justify-content: space-between;
-    margin:0 50px 70px 50px;
-    
+    margin: 0 50px 70px 50px;
+
 }
-.car-item-description{
-    
+
+.car-item-description {
+
     margin-left: 10px;
     font-size: 35px;
     font-weight: 400;
-    
+
 }
-.cart-description{
-    display:flex;
+
+.cart-description {
+    display: flex;
     align-items: center;
 }
-.delete-butoon-controller{
-    color:#cecece;
+
+.delete-butoon-controller {
+    color: #cecece;
     cursor: pointer;
     font-size: 20px;
 }
 
-.delete-block-name{
+.delete-block-name {
     padding-left: 5px;
 }
-.info{
-    margin:50px;
+
+.info {
+    margin: 50px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
     font-weight: 500;
 }
-.total_sum{
-    color:#f90;
+
+.total_sum {
+    color: #f90;
     font-size: 20px;
 }
-.cart-footer{
-    display:flex;
+
+.cart-footer {
+    display: flex;
     justify-content: space-between;
-    margin:50px;
+    margin: 50px;
 }
-.return_button{
+
+.return_button {
     font-size: 20px;
     font-weight: 400;
-    width:140px;
+    width: 140px;
     border-radius: 30px;
 }
-.pay_button
-{
+
+.pay_button {
     font-size: 20px;
     font-weight: 400;
-    width:140px;
+    width: 140px;
     border-radius: 30px;
 }
