--- a/react-app/src/css/authenticationStyles.css
+++ b/react-app/src/css/authenticationStyles.css
@@ -41,17 +41,23 @@
     display:flex;
     flex-direction: column;
 }
-.auth-title{
-    align-self:center;
-    
-}
+
 .auth-title-header{
     font-size: 50px;
     font-weight: 500;
+    margin-left: 15px;
 }
 .reg-sub-title{
     font-size: 25px;
     margin:20px 100px 0 85px;
+    font-weight: 600;
+    color: rgb(33, 49, 60);
+    letter-spacing: 0.05em;
+    text-align: center;
+}
+.reg-step-title{
+    font-size: 25px;
+    margin: 90px 100px 0 100px;
     font-weight: 600;
     color: rgb(33, 49, 60);
     letter-spacing: 0.05em;
@@ -169,6 +175,10 @@
     padding:7px 30px;
     margin-right:15px;
 }
+.auth-continue-step-button {
+    padding:12px 35px;
+    margin:0 25px;
+}
 .auth-redirect-to-Registration{
     align-self: center;
     font-size: 17px;
@@ -187,13 +197,21 @@
     margin:70px 0 50px 0;
     justify-content: space-between;
 }
+.auth-step-futer {
+    display:flex;
+    margin:170px 0 50px 0;
+    justify-content: space-between;
+}
 .auth-prev-button{
     padding:7px 30px;
-    
+}
+.auth-step-button {
+    display:flex;
+    justify-content: space-between;
+    margin-top: 70px;
 }
 .reg-next-step-button{
     padding:7px 27px;
-    
 }
 .Authentication_Form{
     align-self: center;
