--- a/react-app/src/core/css/authenticationStyles.css
+++ b/react-app/src/core/css/authenticationStyles.css
@@ -25,7 +25,7 @@
     border-radius:25px;
     z-index:1100;
 }
-.authWrapper{
+.popupOutside{
     position: fixed;
     width: 100%;
     height: 100%;
