--- a/react-app/src/modules/user/update-pages/update-user-page/update-user-page.css
+++ b/react-app/src/modules/user/update-pages/update-user-page/update-user-page.css
@@ -27,12 +27,12 @@
 .update_form {
     width: 300px;
 }
-.update_user_from_field {
+.update_user_form_field {
     margin-top: 12px;
     display: flex;
     flex-direction: column;
 }
-.update_user_from_input {
+.update_user_form_input {
     border-radius: 3px;
     border: 1px solid grey;
     padding: 5px 10px;
@@ -46,4 +46,40 @@
 .update_user_form_controller {
     margin: 20px 0;
     padding: 5px 25px;
+}
+.page_return {
+    margin: 15px 0 0 20px;
+    cursor: pointer;
+    width: 30px;
+}
+
+.page_return a {
+    color: black;
+}
+
+.update_user_form_labels {
+    display: flex;
+    justify-content: space-between;
+}
+
+.update_user_form_field input {
+    width: 100%;
+}
+
+.update_user_form_password {
+    position: relative;
+}
+
+.update_user_form_password_ok {
+    position: absolute;
+    right: 2%;
+    top: 3px;
+    color: green;
+}
+
+.update_user_form_cancel {
+    position: absolute;
+    right: 2%;
+    top: 3px;
+    color: #ff5d5d;
 }
