--- a/react-app/src/modules/user/update-pages/pages/update-user-page/updateUserPage.css
+++ b/react-app/src/modules/user/update-pages/pages/update-user-page/updateUserPage.css
@@ -1,4 +1,9 @@
 .container {
     padding: 0;
-    margin: 0;
+}
+.userCard {
+    padding-right: 100px;
+}
+.addressCard {
+    padding-left: 100px;
 }
