implementation of pagination

--- a/react-app/src/core/components/pagination/components/paging.css
+++ b/react-app/src/core/components/pagination/components/paging.css
@@ -31,3 +31,13 @@
 .activeItem:hover{
     color: #ffe000;
 }
+
+.page-paging-disable-item {
+    color: #c5c5c5;
+    cursor: default;
+}
+
+.page-paging-disable-item:hover {
+    color: #c5c5c5;
+    cursor: default;
+}
