starting with order logic

--- a/react-app/src/modules/user/user-page/user.style.css
+++ b/react-app/src/modules/user/user-page/user.style.css
@@ -129,10 +129,10 @@
     align-self: center;
 }
 .user-address-block-footer {
-    padding: 20px 10px;
+    padding: 0 10px;
     display: flex;
     justify-content: space-between;
-    margin: 0 35px;
+    margin: 0 46px;
 }
 .user-address-card {
 }
