--- a/react-app/src/core/components/time-picker/time-picker.css
+++ b/react-app/src/core/components/time-picker/time-picker.css
@@ -1,9 +1,37 @@
 .currentTimeList {
+    top: 30px;
+    right: -250px;
     position: absolute;
     width:250px;
-    height:200px;
+    height:300px;
     border-radius: 20px;
-    background-color: #eaeaea;
+    z-index: 1100;
+    background-color: white;
+    margin:10px 20px 65px 20px;
+    box-shadow: 5px -2px 16px 1px rgba(34, 60, 80, 0.2);
+}
+
+.currentTimeTitle {
+    padding:0 0 20px 20px;
+    margin: 20px 0 10px 0;
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.timePickerBody {
+    display: flex;
+    justify-content: space-around;
+    height: 50%;
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.currentTimeFooter {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.timePickerButton {
+    margin: 16px 16px 0 0;
+    padding: 8px 16px;
 }
 
 .datePicker {
@@ -12,11 +40,7 @@
 }
 .currentTimeColumn {
     padding-right: 15px;
-    border-right: 1px solid #bbbcbd;
-}
-.currentTimeList {
-    display: flex;
-    justify-content: space-around;
+    border-right: 1px solid #e4e4e4;
 }
 .TimeColumn {
     display: flex;
@@ -31,11 +55,15 @@
 .colElem {
     align-self: center;
     padding: 15px;
-    margin: 1px;
+    margin: 4px 2px;
     cursor: pointer;
-    background-color: #e0dede;
+    border: 1px solid #ffc107;
     border-radius: 8px;
 }
+.colActiveElem {
+    background-color: #ffc107;
+    color: black;
+}
 .colElem:hover {
-    background-color: #007aff;
+    background-color: #ffc107;
 }
