--- a/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
+++ b/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
@@ -9,8 +9,19 @@
 }
 .mapPart {
     width: 40%;
+    margin: 2% 0 5% 0;
 }
 
-.addressSelectBody {
+.addressSelect {
     width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.addressSelectFooter {
+    margin: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-direction: row-reverse;
 }
