--- a/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
+++ b/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
@@ -2,14 +2,12 @@
     border-radius: 8px;
     border:solid 1px #e0dede;
     padding: 5px;
+    position: relative;
+    height: 60%;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     margin-top: 10%;
-}
-.mapPart {
-    width: 40%;
-    margin: 2% 0 5% 0;
 }
 
 .addressSelect {
@@ -19,7 +17,7 @@
     flex-direction: column;
 }
 .addressSelectFooter {
-    margin: 20px 0;
+    margin: 20px 0 100px 0;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
