--- a/react-app/src/modules/user/update-pages/components/sideBar/left-side-bar.css
+++ b/react-app/src/modules/user/update-pages/components/sideBar/left-side-bar.css
@@ -1,4 +1,6 @@
 .update_page_background {
+    position: absolute;
+    left: 0;
     background-image: linear-gradient(226deg, rgb(253 209 49) 48%, rgb(255 250 88) 100%);
     height: 100vh;
     border-right: 1px solid #cdc64e;
