map box adress feature

--- a/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
+++ b/react-app/src/modules/order/components/addressSwitcher/addressSwitcher.css
@@ -23,3 +23,10 @@
     align-items: flex-end;
     flex-direction: row-reverse;
 }
+
+.addressMarker {
+    position: absolute;
+    top: -11px;
+    left: 96%;
+    z-index: 1000;
+}
