--- a/react-app/src/modules/order/order.css
+++ b/react-app/src/modules/order/order.css
@@ -12,6 +12,10 @@
     font-weight: 380;
 }
 
+.orderPriceEItemFee {
+    font-weight: 370;
+}
+
 .orderBody {
     display: flex;
     justify-content: space-between;
@@ -22,6 +26,26 @@
 }
 
 .orderListItems {
-    height: 500px;
-    width: 350px;
+    height: 450px;
+    width: 400px;
+    border-radius: 15px;
+    border:solid 1px #e0dede;
+    position: relative;
+    margin-right: 10%;
+}
+
+.orderPriceElement {
+    margin-right: 10px;
+}
+
+.orderFormFooter {
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
+    border-top: solid 1px #e0dede;
+}
+
+.orderPriceItem {
+    display: flex;
+    justify-content: space-between;
 }
